--- a/dietersDilemmaBelief.html
+++ b/dietersDilemmaBelief.html
@@ -589,8 +589,8 @@
         const getEmoji = () => {
           if (isOn) return '😊';
           if (isOff) return '😔';
-          if (isQuestion) return '😐';
-          return '😐';
+          if (isQuestion) return '😶';
+          return '😶';
         };
         
         const getStatusText = () => {
