--- a/dietersDilemma.html
+++ b/dietersDilemma.html
@@ -277,7 +277,7 @@
             mood === null ? 'bg-slate-700' : mood === 1 ? 'bg-gradient-to-br from-emerald-400 to-green-600' : 'bg-gradient-to-br from-rose-400 to-red-600'
           }`}>
             <span className={`text-7xl transition-all duration-300 ${mood === null ? 'grayscale opacity-30' : ''}`}>
-              {mood === null ? '😐' : mood === 1 ? '😊' : '😔'}
+              {mood === null ? '😶' : mood === 1 ? '😊' : '😔'}
             </span>
           </div>
           <div className="text-lg font-bold text-white mt-3">
