--- a/dieterInstructions.html
+++ b/dieterInstructions.html
@@ -93,7 +93,16 @@
   </script>
 
   <script type="text/babel">
-    const { useState, useEffect } = React;
+    const { useState, useEffect, useMemo } = React;
+
+    function shuffleArray(arr) {
+      const a = [...arr];
+      for (let i = a.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [a[i], a[j]] = [a[j], a[i]];
+      }
+      return a;
+    }
 
     // Mini BioClip illustration (matches BioClipLarge from dietersDilemma.html)
     function BioClipMini({ status }) {
@@ -162,7 +171,40 @@
       const [currentPage, setCurrentPage] = useState(0);
       const [attentionCheck, setAttentionCheck] = useState(0);
       const [comprehension, setComprehension] = useState({});
+      const [wrongCountQ1, setWrongCountQ1] = useState(0);
+      const [wrongCountQ2, setWrongCountQ2] = useState(0);
+      const [allAnswersQ1, setAllAnswersQ1] = useState([]);
+      const [allAnswersQ2, setAllAnswersQ2] = useState([]);
+      const [q1Error, setQ1Error] = useState(null);
+      const [q2Error, setQ2Error] = useState(null);
       const totalPages = 7;
+
+      const [q1Items] = useState(() => shuffleArray([
+        { id: 'drinkNoPay', text: `Whether I drink the beverage or not does${'\u00A0'}`, underline: 'not', after: ` affect my payment.` },
+        { id: 'drinkCost', text: `Drinking the beverage will cost ${CONFIG.currency}${CONFIG.aCost.toFixed(2)}.` },
+        { id: 'feelGoodBonus', text: `If I feel good at the end of the day, I'll receive an additional ${CONFIG.currency}${CONFIG.yBonus.toFixed(2)} bonus.` },
+        { id: 'oneRound', text: 'My overall payment will be determined by one round randomly selected from throughout the study.' },
+        { id: 'sumAll', text: 'My overall payment will be the sum of all the payments I collect over all rounds I play.' },
+        { id: 'bioClipPay', text: 'My blood chemical levels measured by BioClip directly affects my payment.' }
+      ]));
+
+      const [q2Items] = useState(() => shuffleArray([
+        { id: 'normalCausesGood', text: `If my BioClip shows a normal chemical level and I later feel good, this means that the normal chemical level caused me to feel good.` },
+        { id: 'normalNotCausesGood', text: `If my BioClip shows a normal chemical level and I later feel good, this does `, underline: 'not', after: ` mean that the normal chemical level caused me to feel good.` },
+        { id: 'twoVersions', text: `Each blood chemical has two possibilities: either it is a cause of how you feel, or is a response to how you feel. Different chemicals may work in different ways.` }
+      ]));
+
+      const q1Correct = new Set(['drinkCost', 'feelGoodBonus', 'oneRound']);
+      const q1All = ['drinkNoPay', 'drinkCost', 'feelGoodBonus', 'oneRound', 'sumAll', 'bioClipPay'];
+      const q2Correct = new Set(['normalNotCausesGood', 'twoVersions']);
+      const q2All = ['normalCausesGood', 'normalNotCausesGood', 'twoVersions'];
+
+      const checkAnswer = (items, correctSet) => {
+        const selected = new Set(items.filter(id => comprehension[id]));
+        if (selected.size !== correctSet.size) return false;
+        for (const id of correctSet) { if (!selected.has(id)) return false; }
+        return true;
+      };
 
       useEffect(() => {
         const timeout = setTimeout(() => {
@@ -181,7 +223,55 @@
       }, []);
 
       const handleContinue = () => {
-        sendDataToQualtrics('INSTRUCTIONS_COMPLETE', { completed: true, attentionCheck: attentionCheck, comprehension: comprehension });
+        const q1Selected = q1All.filter(id => comprehension[id]);
+        const q2Selected = q2All.filter(id => comprehension[id]);
+        const q1Ok = checkAnswer(q1All, q1Correct);
+        const q2Ok = checkAnswer(q2All, q2Correct);
+
+        let newWrongQ1 = wrongCountQ1;
+        let newWrongQ2 = wrongCountQ2;
+        let newAllQ1 = [...allAnswersQ1];
+        let newAllQ2 = [...allAnswersQ2];
+
+        if (!q1Ok) {
+          newWrongQ1 = wrongCountQ1 + 1;
+          setWrongCountQ1(newWrongQ1);
+          newAllQ1 = [...allAnswersQ1, q1Selected];
+          setAllAnswersQ1(newAllQ1);
+          setQ1Error('Your answer to Question 1 is incorrect. Please try again.');
+        } else {
+          setQ1Error(null);
+          if (!allAnswersQ1.length || !q1Ok) {
+            newAllQ1 = [...allAnswersQ1, q1Selected];
+            setAllAnswersQ1(newAllQ1);
+          }
+        }
+
+        if (!q2Ok) {
+          newWrongQ2 = wrongCountQ2 + 1;
+          setWrongCountQ2(newWrongQ2);
+          newAllQ2 = [...allAnswersQ2, q2Selected];
+          setAllAnswersQ2(newAllQ2);
+          setQ2Error('Your answer to Question 2 is incorrect. Please try again.');
+        } else {
+          setQ2Error(null);
+          if (!allAnswersQ2.length || !q2Ok) {
+            newAllQ2 = [...allAnswersQ2, q2Selected];
+            setAllAnswersQ2(newAllQ2);
+          }
+        }
+
+        if (q1Ok && q2Ok) {
+          sendDataToQualtrics('INSTRUCTIONS_COMPLETE', {
+            completed: true,
+            attentionCheck: attentionCheck,
+            comprehension: comprehension,
+            wrongCountDieterQ1: newWrongQ1,
+            wrongCountDieterQ2: newWrongQ2,
+            allAnswersDieterQ1: newAllQ1,
+            allAnswersDieterQ2: newAllQ2
+          });
+        }
       };
 
       if (!ready) {
@@ -214,18 +304,16 @@
               It is known that each of the drinks affect one blood chemical. For instance,
             </p>
 
-            <div className="bg-gray-100 rounded-xl p-4 mt-4">
-              <div className="grid grid-cols-1 md:grid-cols-3 gap-3">
-                {EXAMPLES.map((ex, i) => (
-                  <div key={i} className="bg-gray-100 rounded-lg p-3 flex items-center gap-3">
-                    <span className="text-2xl">{ex.icon}</span>
-                    <div>
-                      <div className="text-gray-900 font-medium">{ex.drink}</div>
-                      <div className="text-gray-500 text-sm">affects {ex.chemical}</div>
-                    </div>
+            <div className="grid grid-cols-1 md:grid-cols-3 gap-3 mt-4">
+              {EXAMPLES.map((ex, i) => (
+                <div key={i} className="bg-white rounded-lg p-4 flex items-center gap-3 border border-gray-200 shadow-sm">
+                  <span className="text-2xl">{ex.icon}</span>
+                  <div>
+                    <div className="text-gray-900 font-medium">{ex.drink}</div>
+                    <div className="text-gray-500 text-sm">affects {ex.chemical}</div>
                   </div>
-                ))}
-              </div>
+                </div>
+              ))}
             </div>
           </div>
         </section>,
@@ -240,10 +328,10 @@
             <p className="text-gray-700 mb-4">
               Each <span onClick={() => setAttentionCheck(1)} className={`cursor-pointer ${attentionCheck === 1 ? 'text-green-600' : ''}`}>Monday</span> morning, when you get up, you decide whether to consume the drink. Shortly after, your BioClip tells you whether your blood chemical level is normal. What you care about is whether you will feel good or bad later in the day.
             </p>
-            <div className="flex flex-col md:flex-row items-stretch justify-around gap-6 py-4">
+            <div className="flex flex-col md:flex-row items-stretch justify-around gap-4 py-4">
               {/* Step 1: Decision */}
-              <div className="text-center flex flex-col items-center">
-                <div className="h-12 flex flex-col justify-start">
+              <div className="text-center flex flex-col items-center bg-white border border-gray-200 rounded-lg p-4 shadow-sm flex-1">
+                <div className="mb-3">
                   <div className="text-gray-900 font-medium">Morning</div>
                   <div className="text-gray-500 text-sm">You decide: Drink or Skip?</div>
                 </div>
@@ -255,11 +343,11 @@
                 </div>
               </div>
 
-              <div className="text-gray-400 text-2xl flex items-center">→</div>
+              <div className="text-gray-400 text-2xl flex items-center justify-center">→</div>
 
               {/* Step 2: BioClip Reading */}
-              <div className="text-center flex flex-col items-center">
-                <div className="h-12 flex flex-col justify-start">
+              <div className="text-center flex flex-col items-center bg-white border border-gray-200 rounded-lg p-4 shadow-sm flex-1">
+                <div className="mb-3">
                   <div className="text-gray-900 font-medium">Shortly After</div>
                   <div className="text-gray-500 text-sm">BioClip shows chemical level</div>
                 </div>
@@ -268,11 +356,11 @@
                 </div>
               </div>
 
-              <div className="text-gray-400 text-2xl flex items-center">→</div>
+              <div className="text-gray-400 text-2xl flex items-center justify-center">→</div>
 
               {/* Step 3: Outcome */}
-              <div className="text-center flex flex-col items-center">
-                <div className="h-12 flex flex-col justify-start">
+              <div className="text-center flex flex-col items-center bg-white border border-gray-200 rounded-lg p-4 shadow-sm flex-1">
+                <div className="mb-3">
                   <div className="text-gray-900 font-medium">Later That Day</div>
                   <div className="text-gray-500 text-sm">How do you feel?</div>
                 </div>
@@ -372,21 +460,21 @@
                 <span className="text-2xl">💰</span>
                 <div>
                   <div className="text-gray-900 font-medium">Baseline Bonus</div>
-                  <div className="text-gray-500">You begin each round with a baseline bonus of {CONFIG.currency}{CONFIG.basePay}.</div>
+                  <div className="text-gray-500">You begin each round with a baseline bonus of {CONFIG.currency}{CONFIG.basePay.toFixed(2)}.</div>
                 </div>
               </div>
               <div className="flex items-center gap-3 bg-gray-100 rounded-lg p-3">
                 <span className="text-2xl">🥤</span>
                 <div>
                   <div className="text-gray-900 font-medium">Drink Cost</div>
-                  <div className="text-gray-500">If you consume the drink, you pay {CONFIG.currency}{CONFIG.aCost} for it (deducted from your baseline bonus).</div>
+                  <div className="text-gray-500">If you consume the drink, you pay {CONFIG.currency}{CONFIG.aCost.toFixed(2)} for it (deducted from your baseline bonus).</div>
                 </div>
               </div>
               <div className="flex items-center gap-3 bg-gray-100 rounded-lg p-3">
                 <span className="text-2xl">😊</span>
                 <div>
                   <div className="text-gray-900 font-medium">Feeling Good Bonus</div>
-                  <div className="text-gray-500">If you feel good at the end of the day, you receive an additional {CONFIG.currency}{CONFIG.yBonus} bonus, if you feel bad, you don't.</div>
+                  <div className="text-gray-500">If you feel good at the end of the day, you receive an additional {CONFIG.currency}{CONFIG.yBonus.toFixed(2)} bonus, if you feel bad, you don't.</div>
                 </div>
               </div>
               <div className="flex items-center gap-3 bg-gray-100 rounded-lg p-3">
@@ -414,14 +502,7 @@
               Which of the following statements about your payment are correct? <span className="font-normal text-gray-600">Select all that apply.</span>
             </p>
             <div className="space-y-3">
-              {[
-                { id: 'drinkNoPay', text: `Whether I drink the beverage or not does${'\u00A0'}`, underline: 'not', after: ` affect my payment.` },
-                { id: 'drinkCost', text: `Drinking the beverage will cost ${CONFIG.currency}${CONFIG.aCost.toFixed(2)}.` },
-                { id: 'feelGoodBonus', text: `If I feel good at the end of the day, I'll receive an additional ${CONFIG.currency}${CONFIG.yBonus.toFixed(2)} bonus.` },
-                { id: 'oneRound', text: 'My overall payment will be determined by one round randomly selected from throughout the study.' },
-                { id: 'sumAll', text: 'My overall payment will be the sum of all the payments I collect over all rounds I play.' },
-                { id: 'bioClipPay', text: 'The BioClip reading of my blood chemicals directly affects my payment.' }
-              ].map(item => (
+              {q1Items.map(item => (
                 <label key={item.id} className="flex items-start gap-3 cursor-pointer group">
                   <input
                     type="checkbox"
@@ -435,18 +516,17 @@
                 </label>
               ))}
             </div>
+            {q1Error && (
+              <p className="text-red-600 mt-3 font-medium">{q1Error}</p>
+            )}
           </div>
 
           <div className="bg-gray-50 rounded-xl p-4 mt-6">
             <p className="text-gray-900 font-bold mb-4">
-              Which of the following statements about the game versions and the display order are correct? <span className="font-normal text-gray-600">Select all that apply.</span>
+              Which of the following statements about the study are correct? <span className="font-normal text-gray-600">Select all that apply.</span>
             </p>
             <div className="space-y-3">
-              {[
-                { id: 'normalCausesGood', text: `If my BioClip shows a normal chemical level and I later feel good, this means that the normal chemical level caused me to feel good.` },
-                { id: 'normalNotCausesGood', text: `If my BioClip shows a normal chemical level and I later feel good, this does `, underline: 'not', after: ` mean that the normal chemical level caused me to feel good.` },
-                { id: 'twoVersions', text: `Each study can be one of two versions. The version will be determined at the beginning of a study, and will stay fixed for all ${CONFIG.nRounds} rounds of that study. The next study may be the same or a different version.` }
-              ].map(item => (
+              {q2Items.map(item => (
                 <label key={item.id} className="flex items-start gap-3 cursor-pointer group">
                   <input
                     type="checkbox"
@@ -460,6 +540,9 @@
                 </label>
               ))}
             </div>
+            {q2Error && (
+              <p className="text-red-600 mt-3 font-medium">{q2Error}</p>
+            )}
           </div>
         </section>
       ];
@@ -534,7 +617,13 @@
                   </button>
                 ) : (
                   <button
-                    onClick={() => setCurrentPage(p => p + 1)}
+                    onClick={() => {
+                      if (currentPage === 1 && attentionCheck === 0) {
+                        sendDataToQualtrics('INSTRUCTIONS_COMPLETE', { completed: true, attentionCheck: 0, comprehension: {} });
+                        return;
+                      }
+                      setCurrentPage(p => p + 1);
+                    }}
                     className="px-8 py-3 bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-400 hover:to-blue-500 text-white font-bold rounded-xl shadow-lg hover:shadow-xl transition-all"
                   >
                     Next
