--- a/dieterInstructions.html
+++ b/dieterInstructions.html
@@ -565,7 +565,7 @@
             )}
 
             {/* Main Content Card */}
-            <div className="bg-white rounded-2xl p-6 border border-gray-200">
+            <div className="bg-white rounded-2xl p-6">
               <h1 className="text-3xl font-bold text-gray-900 mb-2 text-center">
                 {currentPage < 6 ? 'Instructions' : 'Comprehension Check'}
               </h1>
